# fastjournal

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: CMakeLists.txt  FastJournalConfig.cmake
debian/: changelog  control  copyright  fastjournal-server.service  fastjournal.service  libfastjournal-doc.install
dev/: coverage  index.php
doc/: CMakeLists.txt  fastjournal.doxy.in  libfastjournal.doxy.in
fastjournal/: CMakeLists.txt  exception.h  fastjournal.cpp  fastjournal.h  version.cpp  version.h.in
fastjournal-cli/: CMakeLists.txt  cli.cpp  cli.h  main.cpp
fastjournal-client/: CMakeLists.txt  client.cpp  client.h  main.cpp
fastjournal-server/: CMakeLists.txt  main.cpp  server.cpp  server.h
tests/: CMakeLists.txt  catch_main.cpp  catch_main.h  catch_version.cpp  main.cpp  main.h  version.cpp
